# licenscc_lib

./: .gitmodules  CMakeLists.txt  README.md  license
include/: Validator.hpp
projects/DIAS_PROJECT/: private_key.rsa
projects/DIAS_PROJECT/include/licensecc/DIAS_PROJECT/: licensecc_properties.h  public_key.h
src/: Validator.cpp  main.cpp
